--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/QuentinGibson/P5-Web-Dev-Kanap#readme",
   "devDependencies": {
     "jest": "^27.4.7"
+  },
+  "dependencies": {
+    "lodash.isequal": "^4.5.0"
   }
 }
