--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is the front end and back end server for Project 5 of the Web Developer path.",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "babel front/js/ -d ./front/js/dist --ignore front/js/tests"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   "homepage": "https://github.com/QuentinGibson/P5-Web-Dev-Kanap#readme",
   "devDependencies": {
     "@babel/plugin-transform-modules-commonjs": "^7.16.8",
+    "babel-cli": "^6.26.0",
     "jest": "^27.4.7"
   },
   "dependencies": {
