--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/QuentinGibson/P5-Web-Dev-Kanap.git"
   },
-  "author": "",
+  "author": "Quentin Gibson",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/QuentinGibson/P5-Web-Dev-Kanap/issues"
@@ -20,7 +20,11 @@
   "homepage": "https://github.com/QuentinGibson/P5-Web-Dev-Kanap#readme",
   "devDependencies": {
     "jest": "^27.4.7",
+    "ts-jest": "^27.1.3",
     "typescript": "^4.5.5",
     "watch": "^1.0.2"
+  },
+  "dependencies": {
+    "@types/jest": "^27.4.0"
   }
 }
