--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   },
   "homepage": "https://github.com/QuentinGibson/P5-Web-Dev-Kanap#readme",
   "devDependencies": {
+    "@types/puppeteer": "^5.4.4",
     "jest": "^27.4.7",
+    "puppeteer": "^13.3.1",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5",
     "watch": "^1.0.2"
