--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
   },
   "homepage": "https://github.com/QuentinGibson/P5-Web-Dev-Kanap#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.2",
+    "@babel/preset-env": "^7.16.11",
     "@types/puppeteer": "^5.4.4",
+    "babel-jest": "^27.5.1",
     "jest": "^27.4.7",
     "puppeteer": "^13.3.1",
     "ts-jest": "^27.1.3",
