--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "front/js/src/index.js",
   "scripts": {
     "test": "jest",
-    "watch": "tsc --project --watch ./tsconfig.json",
-    "build": "tsc --project ./tsconfig.json"
+    "watch": "jest --watch "
   },
   "repository": {
     "type": "git",
