add build command for npm

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "front/js/src/index.js",
   "scripts": {
     "test": "jest",
-    "watch": "jest --watch "
+    "watch": "jest --watch ",
+    "build": "webpack-cli"
   },
   "repository": {
     "type": "git",
