--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "jest",
     "watch": "jest --watch ",
-    "build": "webpack-cli"
+    "build": "webpack-cli",
+    "start": "npx reload -d front"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "watch": "^1.0.2"
   },
   "dependencies": {
-    "@types/jest": "^27.4.0"
+    "@types/jest": "^27.4.0",
+    "webpack-cli": "^4.9.2"
   }
 }
