--- a/package.json
+++ b/package.json
@@ -22,16 +22,15 @@
   "devDependencies": {
     "@babel/core": "^7.17.2",
     "@babel/preset-env": "^7.16.11",
+    "@types/jest": "^27.4.0",
     "@types/puppeteer": "^5.4.4",
     "babel-jest": "^27.5.1",
     "jest": "^27.4.7",
     "puppeteer": "^13.3.1",
     "ts-jest": "^27.1.3",
     "typescript": "^4.5.5",
-    "watch": "^1.0.2"
-  },
-  "dependencies": {
-    "@types/jest": "^27.4.0",
+    "watch": "^1.0.2",
+    "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
   }
 }
